<resources>
    <string name="app_name">AntiCrime</string>
    <string name="aadhar_no">Aadhar no</string>
    <string name="title_activity_skiphome">skiphome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="register">Register</string>
    <string name="phone_no">Phone no</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="welcome">Welcome</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="skip">Skip</string>
    <string name="about_us">About Us</string>
    <string name="anticrime">AntiCrime</string>
    <string name="crimes_around_you">Crimes Around You</string>
    <string name="title_activity_base">base</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="profile_setting">Profile Setting</string>
    <string name="complaint_status">Complaint Status</string>
    <string name="missing_person_status">Missing Person Status</string>
    <string name="crime_status">Crime Status</string>
    <string name="crime_around_you">Crime Around You</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="complaint_status_fragment">Complaint Status Fragment</string>

    <string name="add_alarm">Add Alarm</string>
    <string name="todo">TODO</string>
    <string name="add_person">Add Person</string>

    <string name="logout">Logout</string>
    <string name="contact_us">Contact Us</string>
    <string name="feedback">FeedBack</string>
    <string name="search">Search</string>
    <string name="coding_master">coding_master</string>
    <string name="sign_up_to_learn_quickly">SIGN UP TO LEARN QUICKLY</string>
    <string name="form_username">form_username</string>
    <string name="phone">Phone</string>
    <string name="aadhar">Aadhar</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_member">Already Member</string>

    <string name="welcome_back">Welcome Back</string>
    <string name="sign_i_to_learn_quickly">Sign I To Learn Quickly</string>


    <string name="user_name">UserName</string>

    <string name="form_email">Email ID</string>
    <string name="form_phone">Phone No</string>
    <string name="form_password">Password</string>

    <string name="new_member">New Here ? Sign up instead.</string>
    <string name="nameerror">Enter a valid name</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="mobileerror">Enter a valid mobile</string>
    <string name="passworderror">The password must contain at least 8 character containing, at least one letter and one number</string>
    <string name="form_aadhar">Aadhar no</string>
    <string name="anti_crime">Anti Crime</string>
    <string name="sign_up_to_get_services">Sign Up to Get Services</string>
    <string name="Username">Username</string>

    <string name="Aadhar_no">Aadhar No.</string>
    <string name="Phone_no">Phone No.</string>

    <string name="email">Email</string>
    <string name="Password">password</string>
    <string name="login">Login</string>
    <string name="not_registered_create_your_account">Not Registered| Create your Account</string>

    <string name="already_regiser_login_here">Already regiser| Login here</string>
    <string name="Logout" />
    <string name="missing_person">Missing Person</string>
    <string name="complaint">Complaint</string>


</resources>