<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile_setting"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/profile_setting" />
        <item
            android:id="@+id/nav_complaint_status"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/complaint_status" />

        <item
            android:id="@+id/nav_crime_status"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/crime_status" />

        <item
            android:id="@+id/nav_missing_person_status"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/missing_person_status" />

        <item
            android:id="@+id/nav_crime_around_you"
            android:icon="@drawable/ic_baseline_article_24"
            android:title="@string/crime_around_you" />
        <item
            android:id="@+id/nav_missing"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/missing_person" />
        <item
            android:id="@+id/nav_Complaint"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/complaint" />
    </group>
</menu>