<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".index"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_marginTop="100dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="#ff6e4a"
        android:textSize="45sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_a_new_account"
        android:textColor="#ff6e4a"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:onClick="loginclick"
        android:layout_marginTop="90dp"/>

    <Button
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:text="@string/register"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:onClick="registerclick"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/skip"
        android:textColor="#0d6e6a"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>